@@ -1,5 +1,11 @@
 2014-02-26  gepr  <gepr@tempusdictum.com>
 
+	* software.html: Imported the old software page.
+
+	* projects.html: Fixed Neil's link.
+
+	* documents.html: Imported the documents from the old furmwww.
+
 	* isl.html: Added the desc. of the ISL and the associated images.
 
 	* projects.html: Change title.  Fix ACIMS link.
